--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     <div class="statText">
     <h2>Our's Company Statistics</h2>
-    <p class="statOneP">In this space market-facing, yet UI work flows, or bake it in. Red flag we need a recap by eod, cob or whatever comes first agile end of the day. Not enough bandwith closing these latest prospects is like putting socks on an octopus, yet due diligence.</p>
+    <p class="statOneP">In this space market-facing, yet UI work flows, or bake it in. Red flag we need a by eod, cob or whatever comes first agile end of the day. Not enough bandwith closing these latest prospects is like putting socks on an octopus, yet due diligence.</p>
     <p class="statTwoP">We need to get all stake holders up to speed and in the right place hard stop, or techno- logically savvy or pre launch. Pro-summer software commitment to the cause offline this discussion and wiggle room blue sky. Beef up teams were able to drive adoption and awarness. Screw the pooch killing it.</p>
     </div>
 
